# hakoniwa-core-pro-tutorial

./: README.md
examples/: CMakeLists.txt
examples/hello_world/: CMakeLists.txt  README.md
examples/pdu_communication/: CMakeLists.txt  README.md  asset_controller.py  asset_plant.py  custom.json
examples/pdu_communication/src/: asset_controller.c  asset_plant.c
examples/service/: CMakeLists.txt  README.md  asset_client.py  asset_server.py  service.json
examples/service/src/: asset_client.cpp  asset_server.cpp
